packages/survey-creator-core/src/components/tabs/test.scss
@use "../../variables" as *;

.svc-test-tab__content {
  align-items: center;
  justify-content: center;
}

.svc-test-tab__content .svc-plugin-tab__content {
  justify-content: space-around;
  display: flex;
  flex-grow: 1;
  flex-shrink: 0;

  .svc-preview__test-again {
    width: calcSize(33);
    box-sizing: border-box;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: calcSize(12);
    margin-top: 8px;
  }
}

.svc-test-tab__content-actions {
  position: relative;
  width: 100%;
  display: flex;
  flex-grow: 0;
  flex-shrink: 0;

  .svc-pages-toolbar {
    padding: var(--sjs-spacing-x1) 0px;
    box-shadow: inset 0 var(--sjs-stroke-x1) 0 0 var(--sjs-border-25, #d4d4d4ff);
    background: var(--sjs-layer-1-background-500, #ffffffff);
    width: 100%;
    justify-content: center;
  }

  .svc-page-selector {
    max-width: 50%;
  }
}

.svc-page-invisible {
  .svc-list__item-body {
    padding-block-start: var(--ctr-list-item-padding-top, var(--sjs-spacing-x150));
    padding-block-end: var(--ctr-list-item-padding-bottom, var(--sjs-spacing-x150));
    padding-inline-start: var(--ctr-list-item-padding-left, var(--sjs-spacing-x2));
    padding-inline-end: var(--ctr-list-item-padding-right-with-label-icon, var(--sjs-spacing-x150));
  }
  .svc-list-item__marker-icon {
    padding: 0;
    opacity: var(--ctr-list-item-icon-opacity-label, 0.5);
    width: var(--ctr-list-item-icon-width, var(--sjs-font-size-x3));
    height: var(--ctr-list-item-icon-height, var(--sjs-font-size-x3));
  }
}
.svc-test-tab__content .sd-body--empty {
  @include ctrDefaultFont;
  color: var(--sjs-layer-1-foreground-100, #000000e6);
  text-align: center;
  overflow: hidden;
  position: static;
  display: flex;
  flex-direction: column;
}

