Fix test tab pager overflow

--- a/packages/survey-creator-core/src/components/tabs/test.scss
+++ b/packages/survey-creator-core/src/components/tabs/test.scss
@@ -64,3 +64,12 @@
   display: flex;
   flex-direction: column;
 }
+.svc-page-selector {
+  .sd-action {
+    max-width: 100%;
+    box-sizing: border-box;
+  }
+  .sd-action__title {
+    @include textEllipsis;
+  }
+}
